# adventofcode

./: .pre-commit-config.yaml  README.md  pyproject.toml
aoc/: cli.py  utils.py
aoc/y22/day01/: __init__.py  part1.py  part2.py
aoc/y22/day02/: __init__.py  part1.py  part2.py
aoc/y22/day03/: __init__.py  part1.py  part2.py
aoc/y22/day04/: __init__.py  part1.py  part2.py
aoc/y22/day05/: __init__.py  part1.py
aoc/y23/day01/: part1.py  part2.py
aoc/y23/day02/: part1.py  part2.py
aoc/y23/day03/: __init__.py  part1.py  part2.py
aoc/y23/day04/: __init__.py  part1.py  part2.py
aoc/y23/day05/: __init__.py  part1.py  part2.py
aoc/y23/day06/: __init__.py  part1.py  part2.py
aoc/y23/day07/: __init__.py  part1.py  part2.py
aoc23/day01/: calibration_value_part1.py  calibration_value_part2.py
aoc23/day03/: __init__.py  part1.py  part2.py  part_numbers_part1.py
day01/: calibration_value_part2.py
day02/: combinations_part1.py  combinations_part2.py
tests/: test_day01_part1.py  test_day01_part2.py  test_day02_part1.py  test_day02_part2.py  test_day03_part1.py  test_day03_part2.py  test_utils.py
tests/y22/: test_day01.py  test_day02.py  test_y22_day01.py  test_y22_day02.py  test_y22_day03.py  test_y22_day04.py  test_y22_day05.py
tests/y23/: input_day04_partial  test_day01_part1.py  test_day01_part2.py  test_day02_part1.py  test_day02_part2.py  test_day03.py  test_day03_part1.py  test_day03_part2.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py
