[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Léo GATELLIER <26511053+lgatellier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[tool.poetry.scripts]
aoc = 'aoc.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
